Fix letter spacing of content

--- a/src/app.css
+++ b/src/app.css
@@ -72,7 +72,7 @@ pre code {
   color: #666;
   line-height: 1.7em;
   margin-top: 3rem;
-  letter-spacing: -0.04em;
+  letter-spacing: -0.1px;
 }
 .content video, .content img {
   max-width: calc(100vw - 2rem);
